--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "devDependencies": {
     "backbone": "^1.3.3",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "jasmine-core": "jasmine#^2.5.2"
   }
 }
