--- a/bower.json
+++ b/bower.json
@@ -18,5 +18,8 @@
     "backbone": "^1.3.3",
     "bootstrap": "^3.3.7",
     "jasmine-core": "jasmine#^2.5.2"
+  },
+  "dependencies": {
+    "backbone.localStorage": "backbone.localstorage#^1.1.16"
   }
 }
