--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-jasmine-browser": "^1.7.1",
-    "gulp-watch": "^4.3.11"
+    "gulp-jsdoc3": "^1.0.1",
+    "gulp-watch": "^4.3.11",
+    "jsdoc": "^3.4.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
