--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp": "^3.9.1",
     "gulp-jasmine-browser": "^1.7.1",
     "gulp-jsdoc3": "^1.0.1",
+    "gulp-sass": "^3.1.0",
     "gulp-watch": "^4.3.11",
     "jsdoc": "^3.4.3"
   },
