--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-clean-css": "^2.3.2",
     "gulp-jasmine-browser": "^1.7.1",
     "gulp-jsdoc3": "^1.0.1",
     "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.4.0",
+    "gulp-uglify": "^2.0.1",
     "gulp-watch": "^4.3.11",
     "jsdoc": "^3.4.3"
   },
