--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
   "devDependencies": {
     "backbone": "^1.3.3",
     "bootstrap": "^3.3.7",
-    "jasmine-core": "jasmine#^2.5.2"
+    "jasmine-core": "jasmine#^2.5.2",
+    "font-awesome": "fontawesome#^4.7.0"
   },
   "dependencies": {}
 }
